# performance-marketing-analyst-agent

./: .gitignore  CLAUDE.md  README.md
docs/: 00-README.md  01-proposal.md  02-skills-catalog.md  03-langgraph-guide.md  04-implementation-guide.md  05-tools-reference.md  06-system-prompts.md
docs/thesis/template/: main.typ  metadata.typ
marketing-agent/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
marketing-agent/scripts/: seed_data.py
marketing-agent/src/marketing_agent/: config.py  main.py
marketing-agent/src/marketing_agent/api/: app.py
marketing-agent/src/marketing_agent/api/routes/: chat.py
marketing-agent/src/marketing_agent/db/: connection.py  seed.py
marketing-agent/src/marketing_agent/graph/: graph.py
marketing-agent/src/marketing_agent/graph/nodes/: lead_agent.py  router.py  tool_executor.py
marketing-agent/src/marketing_agent/models/: state.py
marketing-agent/src/marketing_agent/tools/: describe_table.py  list_tables.py  query_data.py  render_chart.py
marketing-agent/tests/: test_interrupt.py  test_router.py  test_sql_validation.py
presentation/: build.py  build_pdf.py  script.md  script.typ  thesis-presentation.pptx
presentation/pptx_extracted/: [Content_Types].xml
presentation/pptx_extracted/ppt/: presentation.xml  tableStyles.xml
test-plan/: test-plan.typ
thesis/: tauthesis.typ
thesis/template/: bibliography.yaml
web/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
web/src/: App.tsx  index.css  types.ts
web/src/components/: ToolUI.tsx  (+3 more)
(+70 files in other folders)
