[project]
name = "marketing-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # LLM and agent framework
    "langgraph>=0.4",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "litellm>=1.60",

    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",

    # HTTP client (for sandbox communication)
    "httpx>=0.28",

    # Configuration
    "pydantic-settings>=2.7",

    # Utilities
    "python-dotenv>=1.0",
    "sqlglot>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
